# vk_beet_engine

./: .gitmodules  CMakeLists.txt  README.md
core/inc/beet/: asset_loader.h  asset_manager.h  device.h  engine.h  input_manager.h  log.h  material.h  renderer.h  resource_manager.h  scene.h  types.h  vertex.h  window.h
core/inc/beet/component/: camera.h  material.h  transform.h
core/inc/beet/gfx/: i_device.h  types.h  vulkan_buffer.h  vulkan_command_buffer.h  vulkan_command_queue.h  vulkan_descriptors.h  vulkan_device.h  vulkan_initializers.h  vulkan_mesh.h  vulkan_pipeline.h  vulkan_render_pass.h  vulkan_shader_modules.h  vulkan_swapchain.h  vulkan_texture.h
core/inc/beet/gfx/vulkan_rhi/: vulkan_device.h
core/inc/beet/scripts/: editor_camera_controller.h
core/src/: asset_loader.cpp  asset_manager.cpp  device.cpp  engine.cpp  input_manager.cpp  log.cpp  material.cpp  renderer.cpp  resource_manager.cpp  scene.cpp  vertex.cpp  window.cpp
core/src/component/: camera.cpp  material.cpp  transform.cpp
core/src/gfx/: vulkan_buffer.cpp  vulkan_command_buffer.cpp  vulkan_command_queue.cpp  vulkan_descriptors.cpp  vulkan_device.cpp  vulkan_initializers.cpp  vulkan_mesh.cpp  vulkan_pipeline.cpp  vulkan_render_pass.cpp  vulkan_shader_modules.cpp  vulkan_swapchain.cpp
core/src/gfx/vulkan_rhi/: vulkan_device.cpp
core/src/scripts/: editor_camera_controller.cpp
editor/src/: editor.cpp  editor.h
res/misc/: default_cube.fbx  octahedron.fbx
res/shaders/: color_triangle_shader.vert  simple_shader.frag  simple_shader.vert  standard_unlit.frag  standard_unlit.vert  tri_mesh_shader.vert  triangle_shader.vert
res/shaders/lit/: standard_lit.frag  standard_lit.vert
res/shaders/sky/: octahedral_sky.frag  octahedral_sky.vert
third/: CMakeLists.txt
